--- a/settings.gradle
+++ b/settings.gradle
@@ -4,8 +4,8 @@ pluginManagement {
         gradlePluginPortal()
         mavenCentral()
         jcenter()
-        maven("https://dl.bintray.com/kotlin/kotlin-eap")
-        maven("https://plugins.gradle.org/m2/")
+        maven { url = "https://dl.bintray.com/kotlin/kotlin-eap" }
+        maven { url = "https://plugins.gradle.org/m2/" }
     }
 }
 
