--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-    id("net.mamoe.mirai-console") version "2.0-RC" // mirai-console version
-    id 'org.jetbrains.kotlin.jvm' version "1.4.21"
-    id 'org.jetbrains.kotlin.plugin.serialization' version "1.4.21"
+    id("net.mamoe.mirai-console") version "2.4.0" // mirai-console version
+    id 'org.jetbrains.kotlin.jvm' version "1.4.31"
+    id 'org.jetbrains.kotlin.plugin.serialization' version "1.4.31"
 }
 
 mirai {
-    coreVersion = "2.0-RC" // mirai-core version
+    coreVersion = "2.4.0" // mirai-core version
 }
 
 group = "top.wsure.warframe"
@@ -19,21 +19,8 @@ repositories {
 }
 
 dependencies {
-    def exposedVersion = "0.29.1"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.0"
-    
     implementation "com.squareup.okhttp3:okhttp:4.9.0"
-
-    implementation "com.h2database:h2:1.4.200"
-
-    implementation "org.jetbrains.exposed:exposed-core:$exposedVersion"
-
-    implementation "org.jetbrains.exposed:exposed-dao:$exposedVersion"
-
-    implementation "org.jetbrains.exposed:exposed-jdbc:$exposedVersion"
-
-    implementation "org.jetbrains.exposed:exposed-jodatime:$exposedVersion"
-
 }
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
