--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,24 @@
 plugins {
-    id("net.mamoe.mirai-console") version "2.4.0" // mirai-console version
-    id 'org.jetbrains.kotlin.jvm' version "1.4.31"
-    id 'org.jetbrains.kotlin.plugin.serialization' version "1.4.31"
+    id("net.mamoe.mirai-console") version "2.8.0" // mirai-console version
+    id 'org.jetbrains.kotlin.jvm' version "1.5.30"
+    id 'org.jetbrains.kotlin.plugin.serialization' version "1.5.30"
 }
 
 mirai {
-    coreVersion = "2.4.0" // mirai-core version
+    coreVersion = "2.8.0" // mirai-core version
 }
 
 group = "top.wsure.warframe"
-version = "0.0.5"
+version = "0.0.6"
 
 repositories {
     mavenLocal()
     mavenCentral()
-    jcenter()
-    maven { url = "https://dl.bintray.com/kotlin/kotlin-eap" }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.0"
-    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.2'
 }
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
